@@ -1,3 +1,9 @@
+2019-03-19  Araki Ken  <arakiken@users.sf.net>
+
+	* ui_simple_sb_view.c: Drawing down side shade is fixed.
+
+	* bl_unistd.c: __bl_setenv() considers 'overwrite' argument.
+
 2019-03-18  Araki Ken  <arakiken@users.sf.net>
 
 	* java/Makefile.in: Updated to Java 10 or later.
